--- a/client/lab_3/style.css
+++ b/client/lab_3/style.css
@@ -258,10 +258,14 @@ div.carousel {
 .prev:focus,
 .next:focus {
   margin: 0;
+  border:  2px solid rgb(12,9,44);
+
   /* Pick a good border colour and check out how it works with your buttons */
 }
 
 .prev:hover,
 .next:hover {
+  border:  2px solid rgb(2,35,90);
+
   /* Pick a good background colour for your hover pseudoclass */
 }
